<resources>
    <string name="app_name">PillPopper</string>
    <string name="pill_popper">PillPopper</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="username_title">Username:</string>
    <string name="password_title">Password:</string>
    <string name="register_button">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_username">Your Email Here</string>
    <string name="enter_password">Your Password Here</string>
    <string name="doctor_code_hint">Doctor code (optional)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_fill_hint">Password</string>
    <string name="regist_description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="regist_title">Create a new account</string>
    <string name="username_fill_hint">Username (Your Email)</string>
    <string name="patient_homepage_title">Hi PatientName!</string>
    <string name="add_a_patient_by_code_button">Add a patient by code</string>
    <string name="patient_code_fill_hint">Patient code</string>
    <string name="wednesday_button">Wednesday</string>
    <string name="monday_button">Monday</string>
    <string name="thursday_button">Thursday</string>
    <string name="tuesday_button">Tuesday</string>
    <string name="friday_button">Friday</string>
    <string name="saturday_button">Saturday</string>
    <string name="sunday_button">Sunday</string>
    <string name="new_prescription_button">Add a new prescription</string>
    <string name="doctorname">DoctorName</string>
    <string name="messaging_with_title">Messaging with</string>
    <string name="conversations_list_title">Your Conversations</string>
    <string name="personal_description_title">Personal description</string>
    <string name="default_personal_description">I am a sample person</string>
    <string name="patientname_title">PatientName</string>
    <string name="edit_profile_button">Edit</string>
    <string name="submit_changes_button">Submit changes</string>
    <string name="profile_picture_url_hint">Profile picture URL (optional)</string>
    <string name="description_edit_hint">Edit your profile description here</string>
    <string name="patient_description_fill">Say Something Cool About Yourself...</string>
    <string name="patient_profile_image__description">Patient Profile Image</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="user_name">User Name</string>
    <string name="doctor_homepage_title">Hi DoctorName</string>
    <string name="back_button">Back</string>
    <string name="toolbar_messages_button">Messages</string>
    <string name="toolbar_profile_button">Profile</string>
    <string name="toolbar_logout_button">Logout</string>
    <string name="pill_popper">PillPopper</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="username_title">Username:</string>
    <string name="password_title">Password:</string>
    <string name="register_button">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_username">Your Email Here</string>
    <string name="enter_password">Your Password Here</string>
    <string name="doctor_code_hint">Doctor code (optional)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_fill_hint">Password</string>
    <string name="regist_description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="regist_title">Create a new account</string>
    <string name="username_fill_hint">Username (Your Email)</string>
    <string name="patient_homepage_title">Hi PatientName!</string>
    <string name="add_a_patient_by_code_button">Add a patient by code</string>
    <string name="patient_code_fill_hint">Patient code</string>
    <string name="wednesday_button">Wednesday</string>
    <string name="monday_button">Monday</string>
    <string name="thursday_button">Thursday</string>
    <string name="tuesday_button">Tuesday</string>
    <string name="friday_button">Friday</string>
    <string name="saturday_button">Saturday</string>
    <string name="sunday_button">Sunday</string>
    <string name="new_prescription_button">Add a new prescription</string>
    <string name="doctorname">DoctorName</string>
    <string name="messaging_with_title">Messaging with</string>
    <string name="conversations_list_title">Your Conversations</string>
    <string name="personal_description_title">Personal description</string>
    <string name="default_personal_description">This person is lazy and didn\'t write any description</string>
    <string name="patientname_title">PatientName</string>
    <string name="edit_profile_button">Edit</string>
    <string name="submit_changes_button">Submit changes</string>
    <string name="profile_picture_url_hint">Profile picture URL (optional)</string>
    <string name="description_edit_hint">Edit your profile description here</string>
    <string name="patient_description_fill">Say Something Cool About Yourself...</string>
    <string name="patient_profile_image__description">Patient Profile Image</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="user_name">User Name</string>
    <string name="doctor_homepage_title">Hi DoctorName</string>
    <string name="timed">Timed</string>
    <string name="untimed">Untimed</string>
    <string name="time_indose">Time indose</string>
    <string name="times_taken_per_day">Times taken per day</string>
    <string name="hours_between_doses">Hours between doses</string>
    <string name="submit_prescription_button">Submit</string>
    <string name="prescription_description">Prescription description</string>
</resources>
