<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/toolbarMessages"
        android:icon="@drawable/ic_menu_messages"
        android:title="@string/toolbar_messages_button"
        android:onClick="launchMessages"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/toolbarProfile"
        android:icon="@drawable/ic_menu_profile"
        android:title="@string/toolbar_profile_button"
        android:onClick="launchProfile"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/toolbarLogout"
        android:icon="@drawable/ic_menu_logout"
        android:title="@string/toolbar_logout_button"
        android:onClick="onLogout"
        app:showAsAction="ifRoom|withText" />
</menu>